--- a/utils/bazel/.bazelrc
+++ b/utils/bazel/.bazelrc
@@ -209,6 +209,11 @@ build:ci --test_output=errors
 # Only show failing tests to reduce output
 build:ci --test_summary=terse
 
+# Attempt to work around intermittent issue while trying to fetch remote blob.
+# See e.g. https://github.com/bazelbuild/bazel/issues/18694.
+build:ci --experimental_remote_cache_eviction_retries=2
+build:ci --experimental_remote_cache_lease_extension=true
+
 ###############################################################################
 
 # The user.bazelrc file is not checked in but available for local mods.
